--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
-
-/* Your CSS Code here. */
+.moviePic{
+	height:400px;
+	width:280px;
+	position:relative;
+	opacity:0.7;
+}
+.movieDetails{
+	width:200px;
+	position:relative;
+	top:-410px;
+	text-align:center;
+	padding:5px 20px;
+	font-size:20px;
+	color:black;
+}
